--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -60,3 +60,4 @@ user.new.password=New password
 user.last.location=Last location
 user.add.group=Add user to group
 user.remove.group=Remove from group
+missing.file=Missing file
