--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -60,4 +60,11 @@ user.new.password=New password
 user.last.location=Last location
 user.add.group=Add user to group
 user.remove.group=Remove from group
-missing.file=Missing file
+file.toobig=The File Uploaded is too big to for a logo
+missing.currency = Select Currency
+missing.orgname = Enter Organization Name
+missing.orgshtdesc = Enter Organization Alias
+missing.orgcountry = Select Country
+missing.orgcounty = Select County/State
+missing.orgtown = Select Town
+missing.address = Enter Address
